<resources>
    <string name="app_name">SeoulPublicService</string>
    <string name="title_home">메인</string>
    <string name="title_map">지도</string>
    <string name="title_recommendation">추천</string>
    <string name="title_mypage">My</string>
    <string name="complaint_description">%s님을 신고하시겠습니까?</string>
    <string name="interest_region_select_comment">관심지역은 최대 3개까지 선택가능합니다.</string>
    <string name="interest_region_select_btn1">강남구</string>
    <string name="interest_region_select_btn2">강동구</string>
    <string name="interest_region_select_btn3">강북구</string>
    <string name="interest_region_select_btn4">강서구</string>
    <string name="interest_region_select_btn5">관악구</string>
    <string name="interest_region_select_btn6">광진구</string>
    <string name="interest_region_select_btn7">구로구</string>
    <string name="interest_region_select_btn8">금천구</string>
    <string name="interest_region_select_btn9">노원구</string>
    <string name="interest_region_select_btn10">도봉구</string>
    <string name="interest_region_select_btn11">동대문구</string>
    <string name="interest_region_select_btn12">동작구</string>
    <string name="interest_region_select_btn13">마포구</string>
    <string name="interest_region_select_btn14">서대문구</string>
    <string name="interest_region_select_btn15">서초구</string>
    <string name="interest_region_select_btn16">성동구</string>
    <string name="interest_region_select_btn17">성북구</string>
    <string name="interest_region_select_btn18">송파구</string>
    <string name="interest_region_select_btn19">양천구</string>
    <string name="interest_region_select_btn20">영등포구</string>
    <string name="interest_region_select_btn21">용산구</string>
    <string name="interest_region_select_btn22">은평구</string>
    <string name="interest_region_select_btn23">종로구</string>
    <string name="interest_region_select_btn24">중구</string>
    <string name="interest_region_select_btn25">중랑구</string>
    <string name="interest_region_select_okay">확인</string>
    <string name="splash_description">근처에 있지만 알지 못했던 다양한 공공서비스를\n확인하고 즐겨보세요</string>
    <string name="item_category_ct_service_name">여기는 서비스 이름이 들어가는곳</string>
    <string name="item_category_place">여기는 장소 이름이 들어가는 곳</string>
    <string name="item_category_pay">유료</string>
    <string name="item_category_reservation_end">예약 종료</string>
    <string name="dialog_edit_profile_edit_profile">프로필 편집</string>
    <string name="dialog_edit_profile_name">이름</string>
    <string name="dialog_edit_profile_et_profile_name_hint">이름을 입력해주세요.</string>
    <string name="dialog_edit_profile_btn_cancel">취소</string>
    <string name="dialog_edit_profile_btn_confirm">확인</string>
    <string name="fragment_category_et_category_search">검색어를 입력하세요.</string>
    <string name="fragment_category_tv_ct_title">야구장</string>
    <string name="fragment_category_tv_ct_free">무료</string>
    <string name="fragment_category_tv_ct_click_free">무료</string>
    <string name="fragment_category_tv_ct_is_reservation_available">예약가능</string>
    <string name="fragment_category_tv_ct_click_is_reservation_available">예약가능</string>
    <string name="fragment_category_tv_reservation_empty">해당하는 공공서비스가 없습니다.</string>
    <string name="fragment_complaint_tv_complaint_description">xx님을 신고하시겠습니까?</string>
    <string name="fragment_complaint_btn_cancel">취소</string>
    <string name="fragment_complaint_btn_confirm">확인</string>
    <string name="fragment_culture_event_unavailable">사용할 수 있는 공공서비스가 없습니다.</string>
    <string name="fragment_detail_price_pay">유료</string>
    <string name="fragment_detail_subcategory">소분류</string>
    <string name="fragment_detail_title">제목</string>
    <string name="fragment_detail_location">장소</string>
    <string name="fragment_detail_distance">현위치로부터 ?km</string>
    <string name="fragment_detail_call">전화하기</string>
    <string name="fragment_detail_reserve">예약하기</string>
    <string name="fragment_detail_reservation_info">예약 관련 정보</string>
    <string name="fragment_detail_target">서비스 대상</string>
    <string name="fragment_detail_target_content">대상 내용</string>
    <string name="fragment_detail_service_open">서비스 일자</string>
    <string name="fragment_detail_service_content">서비스 일자 내용</string>
    <string name="fragment_detail_reservation_available_date">예약 가능 일자</string>
    <string name="fragment_detail_reservation_available_content">예약 가능 일자 내용</string>
    <string name="fragment_detail_usage_time">시설 사용 시간</string>
    <string name="fragment_detail_usage_content">시설 사용 시간 내용</string>
    <string name="fragment_detail_cancel">취소 가능 기준</string>
    <string name="fragment_detail_cancel_content">취소 가능 기준 내용</string>
    <string name="fragment_detail_map">지도</string>
    <string name="fragment_detail_description">설명</string>
    <string name="fragment_detail_more">더보기…</string>
    <string name="fragment_detail_review">후기</string>
    <string name="fragment_detail_empty_review">작성된 후기가 없습니다.</string>
    <string name="fragment_education_unavailable">사용할 수 있는 공공서비스가 없습니다.</string>
    <string name="fragment_facility_unavailable">사용할 수 있는 공공서비스가 없습니다.</string>
    <string name="fragment_facility_rent_unavailable">사용할 수 있는 공공서비스가 없습니다.</string>
    <string name="fragment_filter_title">필터</string>
    <string name="fragment_filter_reset">초기화</string>
    <string name="fragment_filter_list">서비스 종류</string>
    <string name="fragment_filter_facility">체육시설</string>
    <string name="fragment_filter_choose_one">1개 선택</string>
    <string name="fragment_filter_soccer">축구장</string>
    <string name="fragment_filter_tennis">테니스장</string>
    <string name="fragment_filter_ping_pong">탁구장</string>
    <string name="fragment_filter_golf">골프장</string>
    <string name="fragment_filter_baseball">야구장</string>
    <string name="fragment_filter_volleyball">배구장</string>
    <string name="fragment_filter_foot_volleyball">족구장</string>
    <string name="fragment_filter_futsal">풋살장</string>
    <string name="fragment_filter_badminton">배드민턴장</string>
    <string name="fragment_filter_stadium">다목적경기장</string>
    <string name="fragment_filter_gym">체육관</string>
    <string name="fragment_filter_basketball">농구장</string>
    <string name="fragment_filter_education">교육강좌</string>
    <string name="fragment_filter_culture">교양/어학</string>
    <string name="fragment_filter_communication">정보통신</string>
    <string name="fragment_filter_history">역사</string>
    <string name="fragment_filter_science">자연과학</string>
    <string name="fragment_filter_agriculture">도시농업</string>
    <string name="fragment_filter_youth">청년정보</string>
    <string name="fragment_filter_sports">스포츠</string>
    <string name="fragment_filter_art">미술제작</string>
    <string name="fragment_filter_hobby">공예/취미</string>
    <string name="fragment_filter_certification">전문/자격증</string>
    <string name="fragment_filter_etc">기타</string>
    <string name="fragment_filter_culture_title">문화행사</string>
    <string name="fragment_filter_exhibition">전시/관람</string>
    <string name="fragment_filter_experience">교육체험</string>
    <string name="fragment_filter_culture_event">문화행사</string>
    <string name="fragment_filter_leisure">산림여가</string>
    <string name="fragment_filter_park">공원탐방</string>
    <string name="fragment_filter_kids">서울형키즈카페</string>
    <string name="fragment_filter_farm">농장체험</string>
    <string name="fragment_filter_rent">공간시설</string>
    <string name="fragment_filter_room">다목적실</string>
    <string name="fragment_filter_concert">공연장</string>
    <string name="fragment_filter_auditorium">강당</string>
    <string name="fragment_filter_citizen">주민공유공간</string>
    <string name="fragment_filter_camping">캠핑장</string>
    <string name="fragment_filter_young">청년공간</string>
    <string name="fragment_filter_recording">녹화장소</string>
    <string name="fragment_filter_meeting_room">회의실</string>
    <string name="fragment_filter_lecture">강의실</string>
    <string name="fragment_filter_complaint">민원/기타</string>
    <string name="fragment_filter_diagnosis">진료복지</string>
    <string name="fragment_filter_hospital">병원</string>
    <string name="fragment_filter_children_hospital">어린이병원</string>
    <string name="fragment_filter_bus">장애인버스</string>
    <string name="fragment_filter_interest_region">관심 지역</string>
    <string name="fragment_filter_seoul">서울시</string>
    <string name="fragment_filter_kangnam">강남구</string>
    <string name="fragment_filter_kangdong">강동구</string>
    <string name="fragment_filter_kangbuk">강북구</string>
    <string name="fragment_filter_kangseo">강서구</string>
    <string name="fragment_filter_kwanak">관악구</string>
    <string name="fragment_filter_kwangjin">광진구</string>
    <string name="fragment_filter_guro">구로구</string>
    <string name="fragment_filter_geumchun">금천구</string>
    <string name="fragment_filter_nowon">노원구</string>
    <string name="fragment_filter_dobong">도봉구</string>
    <string name="fragment_filter_dongdaemun">동대문구</string>
    <string name="fragment_filter_dongjak">동작구</string>
    <string name="fragment_filter_mapo">마포구</string>
    <string name="fragment_filter_seodaemun">서대문구</string>
    <string name="fragment_filter_seocho">서초구</string>
    <string name="fragment_filter_seongdong">성동구</string>
    <string name="fragment_filter_seongbuk">성북구</string>
    <string name="fragment_filter_songpa">송파구</string>
    <string name="fragment_filter_yangchun">양천구</string>
    <string name="fragment_filter_yeongdeungpo">영등포구</string>
    <string name="fragment_filter_yongsan">용산구</string>
    <string name="fragment_filter_eunpyeong">은평구</string>
    <string name="fragment_filter_jongro">종로구</string>
    <string name="fragment_filter_joong">중구</string>
    <string name="fragment_filter_joongrang">중랑구</string>
    <string name="fragment_filter_etc_region">이외지역</string>
    <string name="fragment_filter_except_seoul">서울제외지역</string>
    <string name="fragment_filter_availability">접수 가능 여부</string>
    <string name="fragment_filter_accepting">접수중</string>
    <string name="fragment_filter_guiding">안내중</string>
    <string name="fragment_filter_fee">요금</string>
    <string name="fragment_filter_free">무료</string>
    <string name="fragment_filter_pay">유료</string>
    <string name="fragment_filter_pay_information">유료(요금안내문의)</string>
    <string name="fragment_filter_apply_filter">필터 적용하기</string>
    <string name="fragment_home_region_select">지역선택</string>
    <string name="fragment_home_service_list">찾으시는 공공서비스가 있나요?</string>
    <string name="fragment_home_description">송파구에는 체육시설, 진료복지 서비스가 있습니다.</string>
    <string name="fragment_home_et_search_hint">전체 공공서비스 대상 검색</string>
    <string name="fragment_home_select_region1">송파구</string>
    <string name="fragment_home_select_region2">강남구</string>
    <string name="fragment_home_select_region3">강북구</string>
    <string name="fragment_home_reselect_region">관심지역 재설정</string>
    <string name="fragment_map_search_hint">검색어를 입력하세요.</string>
    <string name="fragment_map_btn_filter">필터</string>
    <string name="fragment_map_filter_count">1</string>
    <string name="fragment_map_culture_event">문화체험</string>
    <string name="fragment_review_review">후기</string>
    <string name="fragment_review_count">0</string>
    <string name="fragment_review_empty_description">작성된 후기가 없습니다.</string>
    <string name="fragment_review_input_review">후기를 입력해주세요.</string>
    <string name="item_map_info_region">송파구</string>
    <string name="item_map_info_place">잠실제3농구경기장</string>
    <string name="item_map_info_pay">유료</string>
    <string name="item_map_info_reservation">예약하기</string>
    <string name="item_notification_info_title">예약시작 하루전 알림</string>
    <string name="item_notification_target">서비스 이름</string>
    <string name="item_notification_move"><![CDATA[바로가기 >]]></string>
    <string name="my_page_item_reviewed_area">지역구</string>
    <string name="my_page_item_reviewed_title">공공서비스 제목이 들어가는 공간</string>
    <string name="my_page_item_reviewed_content">내 닉네임 : 댓글 내용이 들어가는 공간</string>
    <string name="my_page_item_reviewed_date">99.99.99</string>
</resources>