<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.dialog.review.ReviewFragment">

    <TextView
        android:id="@+id/tv_review_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/fragment_review_review"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_review_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/fragment_review_count"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_review_title"
        app:layout_constraintStart_toEndOf="@+id/tv_review_title"
        app:layout_constraintTop_toTopOf="@+id/tv_review_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_review_list"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/et_review_input_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_review_title" />

    <TextView
        android:id="@+id/tv_review_empty_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/fragment_review_empty_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_review_title" />

    <EditText
        android:id="@+id/et_review_input_field"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/background_radius_10dp_dfdfdd"
        android:hint="@string/fragment_review_input_review"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="8dp"
        android:textColor="@color/total_text_color"
        android:textColorHint="@color/review_hint_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_review_send_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_review_send_btn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_send"
        app:layout_constraintBottom_toBottomOf="@+id/et_review_input_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_review_input_field" />
</androidx.constraintlayout.widget.ConstraintLayout>