<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_notification_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:background="@drawable/background_select_region_layout"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_notification_item_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notification"
            app:layout_constraintBottom_toBottomOf="@+id/tv_notification_item_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_notification_item_target" />

        <TextView
            android:id="@+id/tv_notification_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/item_notification_info_title"
            android:textColor="@color/point_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_notification_item_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_notification_item_target"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/item_notification_target"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_notification_item_title"
            app:layout_constraintTop_toBottomOf="@id/tv_notification_item_title" />

        <TextView
            android:id="@+id/tv_notification_item_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_notification_move"
            android:textColor="@color/enable_move_text_color"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_notification_item_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_notification_item_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
